Revision history for {{$dist->name}}

{{$NEXT}}

0.04  2015-04-13 16:45:58 BST

 [Internal & API change]
 - refactor to remove is_stored() method. retrieve() now makes empty return if not found (and dies later). 

0.03  2015-04-13 11:21:25 BST

 [API Change]
 - 'storage' argument no longer can be used to set directory for default File storage

 [Testing]
 - reduced testing dependencies, dummy test storage object

0.02  2015-04-10 17:31:12 BST

 [Feature]
 - Adding support for documented TEST_MF_MODE environment variable

0.01  2015-04-10 17:05:06 BST

 - Initial release
